[package]
name = "soltx"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
base64 = "0.22.1"
bincode = "1.3.3"
clap = { version = "4.5.23", features = ["derive"] }
dotenvy = "0.15.7"
solana-client = "2.2.0"
solana-sdk = "2.2.1"
tabled = "0.18.0"
termcolor = "1.4.1"
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
